[Main] Fix npm pack and publish issues

--- a/lib/test/Selenium/Tests.html
+++ b/lib/test/Selenium/Tests.html
@@ -23,7 +23,7 @@
         require([
             "qunit", // Load qunit here instead of with tests, otherwise will not work
             "@nevware21/ts-utils"
-        ], function (QUnit, tsUtils, aicore) {
+        ], function (QUnit, tsUtils) {
             require.config({
                 baseUrl: './'
             });
